case-study-1/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = "10.10.0.0/16"

  tags = {
    Name = "an-vpc"
  }
}
